--- a/server/content/analisis.html
+++ b/server/content/analisis.html
@@ -13,11 +13,7 @@
     </header>
     <article>
         <section>
-            <form action="/crc" method=POST>
-                <div>
-                    <label for="msg">Ingresar Mensaje</label>
-                    <input type="text" title="Ingrese el mensaje a codificar" name="msg" id="msg" placeholder="10101010">
-                </div>
+            <form action="/hamming" method=POST>
                 <div>
                     <label for="poly">Ingresar P(x)</label>
                     <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010">
