--- a/server/content/analisis.html
+++ b/server/content/analisis.html
@@ -5,6 +5,7 @@
     <title>{{.Title}}</title>
     <link rel="stylesheet" href='http://localhost:6080/css/pure-min.css'>
     <link rel="stylesheet" href='http://localhost:6080/css/base.css'>
+    <script src="http://localhost:6080/js/analisis.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
                     <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010">
                 </div>
                 <div>
-                    <button class="pure-button" type="submit">Calcular</button>
+                    <button class="pure-button" id="boton" type="submit">Calcular</button>
                 </div>
             </form>
         </section>
