--- a/server/content/index.html
+++ b/server/content/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>{{.Title}}</title>
     <link rel="stylesheet" href='http://localhost:6080/css/pure-min.css'>
+    <link rel="stylesheet" href='http://localhost:6080/css/grids-responsive-min.css'>
     <link rel="stylesheet" href='http://localhost:6080/css/base.css'>
     <script src="http://localhost:6080/js/crc.js" type="text/javascript"></script>
 </head>
@@ -19,13 +20,15 @@
         <article>
             <section>
                 <form class="pure-form pure-form-stacked" action="/crc" method=POST>
-                    <div>
-                        <label for="msg">Ingresar Mensaje</label>
-                        <input type="text" title="Ingrese el mensaje a codificar" name="msg" id="msg" placeholder="10101010">
-                    </div>
-                    <div>
-                        <label for="poly">Ingresar P(x)</label>
-                        <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010">
+                    <div class="pure-g">
+                        <div class="group pure-u-1">
+                            <input type="text" title="Ingrese el mensaje a codificar" name="msg" id="msg" placeholder="10101010" required="required">
+                            <label for="msg">Ingresar Mensaje</label>
+                        </div>
+                        <div class="group pure-u-1">
+                            <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010" required="required">
+                            <label for="poly">Ingresar Polinomio</label>
+                        </div>
                     </div>
                     <div>
                         <button id="boton" class="pure-button" type='submit'>Calcular</button>
