--- a/server/content/analisis.html
+++ b/server/content/analisis.html
@@ -4,6 +4,7 @@
 <head>
     <title>{{.Title}}</title>
     <link rel="stylesheet" href='http://localhost:6080/css/pure-min.css'>
+    <link rel="stylesheet" href='http://localhost:6080/css/grids-responsive-min.css'>
     <link rel="stylesheet" href='http://localhost:6080/css/base.css'>
     <script src="http://localhost:6080/js/analisis.js" type="text/javascript"></script>
 </head>
@@ -20,11 +21,11 @@
             <section>
                 <form class="pure-form pure-form-stacked" action="/hamming" method=POST>
                     <div class="pure-g">
-                        <div class="pure-u-5-24">
-                            <label for="poly">Ingresar P(x)</label>
-                            <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010">
+                        <div class="group pure-u-1-1 pure-u-lg-1-5">
+                            <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010" required="required" autofocus>
+                            <label for="poly">Ingresar Polinomio</label>
                         </div>
-                        <aside id="errores" class="pure-u-1-2"></aside>
+                        <aside id="errores" class="pure-u-1-1 pure-u-lg-3-5"></aside>
                     </div>
                     <div>
                         <button class="pure-button" id="boton" type="submit">Calcular</button>
