Mejoras a los colores

--- a/server/content/index.html
+++ b/server/content/index.html
@@ -22,7 +22,7 @@
                 <form class="pure-form pure-form-stacked" action="/crc" method=POST>
                     <div class="pure-g">
                         <div class="group pure-u-1">
-                            <input type="text" title="Ingrese el mensaje a codificar" name="msg" id="msg" placeholder="10101010" required="required">
+                            <input type="text" title="Ingrese el mensaje a codificar" name="msg" id="msg" placeholder="10101010" required="required" autofocus>
                             <label for="msg">Ingresar Mensaje</label>
                         </div>
                         <div class="group pure-u-1">
