--- a/server/content/analisis.html
+++ b/server/content/analisis.html
@@ -22,7 +22,7 @@
                 <form class="pure-form pure-form-stacked" action="/hamming" method=POST>
                     <div class="pure-g">
                         <div class="group pure-u-1-1 pure-u-lg-1-5">
-                            <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010" required="required">
+                            <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010" required="required" autofocus>
                             <label for="poly">Ingresar Polinomio</label>
                         </div>
                         <aside id="errores" class="pure-u-1-1 pure-u-lg-3-5"></aside>
