--- a/server/content/analisis.html
+++ b/server/content/analisis.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
     <title>{{.Title}}</title>
+    <meta charset='utf-8'>
+    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Orienta'>
     <link rel="stylesheet" href='http://localhost:6080/css/pure-min.css'>
     <link rel="stylesheet" href='http://localhost:6080/css/grids-responsive-min.css'>
     <link rel="stylesheet" href='http://localhost:6080/css/base.css'>
@@ -13,32 +15,28 @@
     {{ template "menu" . }}
     <section>
         <header>
-            <hgroup>
-                <h1>{{.Title}}</h1>
-            </hgroup>
+            <h1>{{.Title}}</h1>
         </header>
-        <article>
-            <section>
-                <form class="pure-form pure-form-stacked" action="/hamming" method=POST>
-                    <div class="pure-g">
-                        <div class="group pure-u-1-1 pure-u-lg-1-5">
-                            <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010" required="required" autofocus>
-                            <label for="poly">Ingresar Polinomio</label>
-                        </div>
-                        <aside id="errores" class="pure-u-1-1 pure-u-lg-3-5"></aside>
+        <section aria-label="inputs">
+            <form class="pure-form pure-form-stacked" action="/hamming" method=POST>
+                <div class="pure-g">
+                    <div class="group pure-u-1-1 pure-u-lg-1-5">
+                        <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010" required="required" autofocus>
+                        <label for="poly">Ingresar Polinomio</label>
                     </div>
-                    <div>
-                        <button class="pure-button" id="boton" type="submit">Calcular</button>
-                    </div>
-                </form>
-            </section>
-            <section>
-                <header>
-                    <h1>Resultados</h1>
-                </header>
-                <div id="resultados"></div>
-            </section>
-        </article>
+                    <aside id="errores" class="pure-u-1-1 pure-u-lg-3-5"></aside>
+                </div>
+                <div>
+                    <button class="pure-button" id="boton" type="submit">Calcular</button>
+                </div>
+            </form>
+        </section>
+        <section>
+            <header>
+                <h2>Resultados</h2>
+            </header>
+            <div id="resultados"></div>
+        </section>
         <footer>
             Dibez Pablo, Santana Santiago
         </footer>
