--- a/server/content/index.html
+++ b/server/content/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
     <title>{{.Title}}</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Orienta'>
     <link rel="stylesheet" href='http://localhost:6080/css/pure-min.css'>
     <link rel="stylesheet" href='http://localhost:6080/css/grids-responsive-min.css'>
     <link rel="stylesheet" href='http://localhost:6080/css/base.css'>
@@ -13,35 +15,32 @@
     {{ template "menu" .}}
     <section>
         <header>
-            <hgroup>
-                <h1>{{.Title}}</h1>
-            </hgroup>
+            <h1>{{.Title}}</h1>
         </header>
-        <article>
-            <section>
-                <form class="pure-form pure-form-stacked" action="/crc" method=POST>
-                    <div class="pure-g">
-                        <div class="group pure-u-1">
-                            <input type="text" title="Ingrese el mensaje a codificar" name="msg" id="msg" placeholder="10101010" required="required" autofocus>
-                            <label for="msg">Ingresar Mensaje</label>
-                        </div>
-                        <div class="group pure-u-1">
-                            <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010" required="required">
-                            <label for="poly">Ingresar Polinomio</label>
-                        </div>
+        <section aria-label="inputs">
+            <form class="pure-form pure-form-stacked" action="/crc" method=POST>
+                <div class="pure-g">
+                    <div class="group pure-u-1">
+                        <input type="text" title="Ingrese el mensaje a codificar" name="msg" id="msg" placeholder="10101010" required="required"
+                            autofocus>
+                        <label for="msg">Ingresar Mensaje</label>
                     </div>
-                    <div>
-                        <button id="boton" class="pure-button" type='submit'>Calcular</button>
+                    <div class="group pure-u-1">
+                        <input title="Ingrese el polinomio" type="text" name="poly" id="poly" placeholder="11101010" required="required">
+                        <label for="poly">Ingresar Polinomio</label>
                     </div>
-                </form>
-            </section>
-            <section>
-                <header>
-                    <h1>Resultado</h1>
-                </header>
-                <div id="resultados"></div>
-            </section>
-        </article>
+                </div>
+                <div>
+                    <button id="boton" class="pure-button" type='submit'>Calcular</button>
+                </div>
+            </form>
+        </section>
+        <section>
+            <header>
+                <h2>Resultado</h2>
+            </header>
+            <div id="resultados"></div>
+        </section>
         <footer>
             Dibez Pablo, Santana Santiago
         </footer>
